[project]
name = "podcast-rag"
version = "0.1.0"
description = "RAG pipeline for podcast episodes"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "ollama>=0.4.0",
    "duckdb>=1.2.0",
    "fastapi>=0.115.0",
    "rich>=13.0.0",
]

[project.scripts]
podcast-rag = "podcast_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
